[gd_scene load_steps=5 format=3 uid="uid://dijn7haax0boi"]

[ext_resource type="Script" path="res://addons/controller_icons/objects/ControllerIconPathSelector.gd" id="1_0ucf4"]
[ext_resource type="PackedScene" uid="uid://bituity863qe4" path="res://addons/controller_icons/objects/path_selection/input_action.tscn" id="2_wlqmh"]
[ext_resource type="PackedScene" uid="uid://b3lplrf2w6kh7" path="res://addons/controller_icons/objects/path_selection/joypad_path.tscn" id="3_6ffwr"]
[ext_resource type="PackedScene" uid="uid://d2ow6e2ba86b6" path="res://addons/controller_icons/objects/path_selection/specific_path.tscn" id="4_3ai5v"]

[node name="ControllerIconPathSelector" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ucf4")

[node name="TabContainer" type="TabContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(850, 450)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/side_margin = 0
tab_alignment = 1

[node name="Input Action" parent="TabContainer" instance=ExtResource("2_wlqmh")]
unique_name_in_owner = true
layout_mode = 2

[node name="Joypad Path" parent="TabContainer" instance=ExtResource("3_6ffwr")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Specific Path" parent="TabContainer" instance=ExtResource("4_3ai5v")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="tab_selected" from="TabContainer" to="." method="_on_tab_container_tab_selected"]
[connection signal="done" from="TabContainer/Input Action" to="." method="_on_input_action_done"]
[connection signal="done" from="TabContainer/Joypad Path" to="." method="_on_joypad_path_done"]
[connection signal="done" from="TabContainer/Specific Path" to="." method="_on_specific_path_done"]
